--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
 <html>
 
-    <head>
-      <h2> URN 6816261 </h2>
-    </head>
     <img src = WebBanner.png" alt="Banner" width="900" height="300"
+    <h1><b>ENG0018 Computer Laboratory 2023/2024</b></h1>
+    <h2> URN 6816261 </h2>
 </html>
