--- a/index.html
+++ b/index.html
@@ -2,11 +2,42 @@
 
 <html>
     <head>
-     </head>
-        <img src = WebBanner.png" alt="Banner" width="900" height="300"
+    </head>
+
+    <head>
+        <img src = WebBanner.png" alt="Banner" width="900" height="300">
             <h1><b>ENG0018 Computer Laboratory 2023/2024</b></h1>
             <h2> URN 6816261 </h2>
     <hr>
     <h2 style="font-family:calibre;"><b>Conference paper: Transmission line speaker</b>
+
+
+        <!style for tables>
+        <style>
+            table{
+                font-family: arial, sans-serif:
+                border-collapse: collapse;
+                width: 30%;
+            }
+
+            td,th {
+                    border: 1px solid #dddddd;
+                    text-align: left;
+                    padding: 8px
+                }
+
+                tr:nth-child(even) {
+                    background-color: #dddddd;
+                }
+
+        </style>
+
+        <style>
+            p.ex1 {
+                margin-left: 250px
+            }
+        </style>
+    </head>
+
     
 </html>
