--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <head>
-        <img src = WebBanner.png" alt="Banner" width="900" height="300">
+        <img src = WebBanner2023.png" alt="Banner" width="900" height="300">
             <h1><b>ENG0018 Computer Laboratory 2023/2024</b></h1>
             <h2> URN 6816261 </h2>
     <hr>
